<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dc_servo</name>
  <version>1.2.0</version>
  <description>
    Metapackage for ROS interface to the Vedder VESC open source motor controller.
  </description>
  <maintainer email="joebetz@seas.upenn.edu">Johannes Betz</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/vesc</url>
  <url type="repository">https://github.com/f1tenth/vesc</url>
  <url type="bugtracker">https://github.com/f1tenth/vesc/issues</url>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="josh.whitley@autoware.org">Joshua Whitley</author>
  <author email="hxue@ucsd.edu">Haoru Xue</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>dc_motor_controller</exec_depend>
  <exec_depend>dc_motor_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
